--- a/Backbone/index.html
+++ b/Backbone/index.html
@@ -1,1 +1,25 @@
+<!doctype html>
+<html lang="en" data-framework="typescript">
+	<head>
+		<meta charset="utf-8">
+		<title>Backbone.js Cell painting Benkchmar</title>
+	</head>
+	<body>
+		<div class="cellPaintingApp"></div>
 
+    <script type="text/x-handlebars-template" id="cell-template">
+      <div data-cid="{{cid}}"></div>
+    </script>
+
+    <script type="text/x-handlebars-template" id="cell-template">
+      <span data-cid="{{cid}}">{{text}}</span>
+    </script>
+
+		<script src="node_modules/todomvc-common/base.js"></script>
+		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="node_modules/lodash/index.js"></script>
+		<script src="node_modules/backbone/backbone.js"></script>
+		<script src="node_modules/backbone.localstorage/backbone.localStorage.js"></script>
+		<script src="js/app.js"></script>
+	</body>
+</html>
