--- a/Backbone/index.html
+++ b/Backbone/index.html
@@ -5,6 +5,7 @@
 		<title>Backbone.js Cell painting Benkchmar</title>
 	</head>
 	<body>
+		<div class="app"></div>
 		<div class="cellPaintingApp"></div>
 
     <script type="text/x-handlebars-template" id="cell-template">
@@ -15,11 +16,6 @@
       <span data-cid="{{cid}}">{{text}}</span>
     </script>
 
-		<script src="node_modules/todomvc-common/base.js"></script>
-		<script src="node_modules/jquery/dist/jquery.js"></script>
-		<script src="node_modules/lodash/index.js"></script>
-		<script src="node_modules/backbone/backbone.js"></script>
-		<script src="node_modules/backbone.localstorage/backbone.localStorage.js"></script>
-		<script src="js/app.js"></script>
+		<script src="Backbone.js"></script>
 	</body>
 </html>
