Added last test with Backbone-react. Changed the call order to wait between executions. Improved the copy webpack plugin path to reduce the number of lines. Added the editor cofig file.

--- a/src/backbone_react/T1-bigPainting-one-component/index.html
+++ b/src/backbone_react/T1-bigPainting-one-component/index.html
@@ -7,6 +7,6 @@
 	<body>
 		<div class="app"></div>
 
-		<script src="../../backbone_react.t2.js"></script>
+		<script src="../../backbone_react.t1b.js"></script>
 	</body>
 </html>
