--- a/src/backbone_react/T1-bigPainting/index.html
+++ b/src/backbone_react/T1-bigPainting/index.html
@@ -2,18 +2,11 @@
 <html lang="en" data-framework="typescript">
 	<head>
 		<meta charset="utf-8">
-		<title>Backbone.js Cell painting Benkchmar</title>
+		<title>Backbone.js Cell painting Benkchmark</title>
 	</head>
 	<body>
 		<div class="app"></div>
 
-    <script type="text/template" id="cell-template">
-      <%=text%>
-    </script>
-
-		<script type="text/template" id="row-template">
-    </script>
-
-		<script src="../../backbone.t1.js"></script>
+		<script src="../../backbone_react.t1.js"></script>
 	</body>
 </html>
