--- a/src/benchmarkFramework/index.html
+++ b/src/benchmarkFramework/index.html
@@ -7,6 +7,13 @@
 	<body>
 		<div class="app"></div>
 
+		<script type="text/template" id="result-template">
+			<div><b>Results:</b></div>
+			<div style='margin-left:10px'>Total time elapsed: <b><%= totalTime %> (<%= result.totalTime %> ms)</b></div>
+			<div style='margin-left:10px'>Number of muntations: <b><%= result.loopCount %></b></div>
+			<div style='margin-left:10px'>Rendering time elapsed: <b><%= renderTime  %> (<%= result.renderTime %> ms)</b></div>
+		</script>
+
 		<script src="js-benchmark.js"></script>
 	</body>
 </html>
