--- a/src/backbone/T3-settingEvents-rerender/index.html
+++ b/src/backbone/T3-settingEvents-rerender/index.html
@@ -8,7 +8,7 @@
 		<div class="app"></div>
 
     <script type="text/template" id="cell-template">
-      <%=text%>
+      <span class="text"><%=text%></span>
     </script>
 
 		<script type="text/template" id="row-template">
