--- a/src/backbone/T5-Asynch-update-random-underscore-template/index.html
+++ b/src/backbone/T5-Asynch-update-random-underscore-template/index.html
@@ -11,7 +11,7 @@
 		<% for(var i = 0; i < rows.length; i++){%>
 			<div>
 				<% for(var j = 0; j < rows[i].cells.length; j++){%>
-					<span><b>-|-</b><%=rows[i].cells[j].text%><b>-|-</b></span>
+					<span class="text"><b>-|-</b><%=rows[i].cells[j].text%><b>-|-</b></span>
 				<%}%>
 			</div>
 		<%}%>
