--- a/src/react/T1-bigPainting/index.html
+++ b/src/react/T1-bigPainting/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	
-        <div class="app"></div>
+        <div id="app"></div>
 		<script src="../../react.t1.js"></script>
 
 	</body>
