Make some test in order to probe how jquery works.
Make some test in order to probe how jquery works.

--- a/src/backbone/T1-bigPainting-jquery/index.html
+++ b/src/backbone/T1-bigPainting-jquery/index.html
@@ -8,19 +8,12 @@
 		<div class="app"></div>
 
     <script type="text/template" id="cell-template">
-			<div>
       <%=text%>
-			<% if(text.length % 2 == 0){ %>
-				<span class="par"> PAR </span>
-			<% } else { %>
-				<span class="impar"> IMPAR </span>
-			<% } %>
-			</div>
     </script>
 
 		<script type="text/template" id="row-template">
     </script>
 
-		<script src="../../backbone.t1.js"></script>
+		<script src="../../backbone.t1d.js"></script>
 	</body>
 </html>
